--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,1 +1,9 @@
-ROUTE WORKS
+<h1>Am I Ruby?</h1>
+<%= form_for(:search, url: search_index_path, method: :get, :remote => true) do |f| %>
+  <%= f.text_field :keyword, id: 'keyword' %>
+  <%=f.submit "Search", :disable_with=>"Loading..."%>
+<% end %>
+
+<div id="display_result">
+  <%= render "result" %>
+</div>
