working without JS, switching to new page for results

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,9 +1,6 @@
 <h1>Am I Ruby?</h1>
-<%= form_for(:search, url: search_index_path, method: :get, :remote => true) do |f| %>
+<%= form_for(:search, url: results_path, method: :get) do |f| %>
   <%= f.text_field :keyword, id: 'keyword' %>
-  <%=f.submit "Search", :disable_with=>"Loading..."%>
+  <%=f.submit "Search"%>
 <% end %>
 
-<div id="display_result">
-  <%= render "result" %>
-</div>
