--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Am I Ruby?</h1>
-<%= form_for(:search, url: results_path, method: :get) do |f| %>
+<%= form_for(@search) do |f| %>
   <%= f.text_field :keyword, id: 'keyword' %><br><br>
   <%=f.submit "Search"%>
 <% end %>
