add audio files

--- a/app/views/searches/create.js.erb
+++ b/app/views/searches/create.js.erb
@@ -1,2 +1,15 @@
-$('#result').hide().html('<%= j @result %>').fadeIn(250)
+var result = $('#result')
 
+result.hide().html('<%= j @result %>').fadeIn(250);
+playAudio(result);
+
+function playAudio(result){
+  if (result.html() === "Yes"){
+
+    $('#yes-audio').trigger('play')
+  }
+  else if (result.html() === "Nope."){
+    $('#no-audio').trigger('play')
+  }
+ 
+}
