--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,3 +1,13 @@
+<audio class="audios" id="yes-audio" controls preload="none"> 
+   <source src="audios/cheers.mp3" type="audio/mpeg">
+</audio>
+
+<audio class="audios" id="no-audio" controls preload="none"> 
+   <source src="audios/boo.mp3" type="audio/mpeg">
+</audio>
+
+
+
 <h1>Am I Ruby?</h1>
 <%= form_for(@search, remote: true) do |f| %>
   <%= f.text_field :keyword, id: 'keyword' %><br><br>
