--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,8 @@
   <%= analytics_init if Rails.env.production? %>
 </head>
 <body>
-    <section id="AmIRuby">
-
-<%= yield %>
-
+  <section id="AmIRuby">
+    <%= yield %>
+  </section>
 </body>
 </html>
