--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -15,6 +15,11 @@ body {
   background-repeat: repeat-x;
 }
 
+#keyword {
+  text-align: left;
+  font-size: 32px;
+}
+
 .search-btn {
   color: white;
   background: transparent;
