add basic footer

--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -1,5 +1,5 @@
 *{
-	text-align: center;
+  text-align: center;
   color: white;
 }
 
@@ -51,4 +51,21 @@ input         {
 
 .audios {
   display: none;
+}
+
+footer {
+  width:100%;
+  position:absolute;
+  bottom:0;
+  padding-bottom: .75em;
+}
+
+footer li {
+  display: inline-block;
+  padding: 0 .75em 0 .75em;
+}
+
+footer li a {
+  text-decoration: none;
+  color: white;
 }
