--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,8 @@
   <section id="AmIRuby">
     <%= yield %>
   </section>
+  <footer>
+    <%= render 'layouts/footer' %>
+  </footer>
 </body>
 </html>
