--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -5,7 +5,7 @@
 <h1>Am I Ruby?</h1>
 <%= form_for(@search, remote: true) do |f| %>
   <%= f.text_field :keyword, id: 'keyword' %><br><br>
-  <%=f.submit "Search", class: "search-btn"%>
+  <%=f.submit "Search", class: "search-btn sparkley"%>
 <% end %>
 <section id="result"></section>
     </div>
