Add footer with jquery'd credits, delete results.html.erb

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-    <footer>
-      <li>Credits: &nbsp<a href="#amiruby" id="credits"> Team AmIRuby</a></li> |
+<ul>
+      Made with ♥ by<li><a href="#amiruby" id="credits">Team AmIRuby</a></li> |
       <li><a href="https://github.com/jeremysklarsky/AmIRuby">Source code</a></li> | 
       <li><a href="mailto:info@amiruby.com">Feedback</a></li>
-    </footer>
+    </ul>
