--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -11,7 +11,7 @@
 
     <h1>Am I Ruby?</h1>
     <%= form_for(@search, remote: true) do |f| %>
-      <%= f.text_field :keyword, id: 'keyword' %><br><br>
+      <%= f.text_field :keyword, id: 'keyword', placeholder: "twitter.com" %><br><br>
       <%=f.submit "Search", class: "search-btn"%>
     <% end %>
     <section id="result"></section>
