Remove old JS from files & add punctuation to Yes response.

--- a/app/views/searches/create.js.erb
+++ b/app/views/searches/create.js.erb
@@ -4,7 +4,7 @@ result.hide().html('<%= j @result %>').fadeIn(250);
 playAudio(result);
 
 function playAudio(result){
-  if (result.html() === "Yes"){
+  if (result.html() === "Yes!"){
 
     $('#yes-audio').trigger('play')
   }
